# InfiniteBoard

./: .gitignore  README.md  convert_icon.ps1  create_icon.ps1  index.html  package-lock.json  package.json  project_master_instructions.md  tailwind.config.js  vite.config.js
GeneratedBoards/Templates/LinearTimeline8/: LinearTimeline8.json
GeneratedBoards/Templates/ProductBrainstorm16x9/: ProductBrainstorm16x9.json
GeneratedBoards/Templates/Timeline4Acts/: Timeline4Acts.json
Skills/beta-tester/: SKILL.md
Skills/board-generator/: SKILL.md
Skills/board-generator/scripts/: gen_google_images.js  inspect_model.js  list_models.js  models.txt  package-lock.json  package.json  test_ar.js
Skills/brand-guidelines/: SKILL.md
Skills/moodboard-template-creator/: SKILL.md
Skills/tauri-env-setup/: SKILL.md
Skills/tauri-env-setup/scripts/: check_env.ps1  install_deps.ps1
docs/: USER_MANUAL.md
src/: App.jsx  AppTest.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: ErrorBoundary.jsx  InfiniteCanvas.jsx  PanelCreator.jsx  PropertiesPanel.jsx  ScreenshotOverlay.jsx  SettingsModal.jsx  StatusBar.jsx  Toolbar.jsx  TopBar.jsx
src/store/: useStore.js
src/utils/: aiGenerator.js  exportUtils.js
