[package]
name = "infinite-board"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `debug` feature
custom-protocol = ["tauri/custom-protocol"]
